remove hard coded URL params for backend, add configurable

--- a/webclient/pairsclient0_5.html
+++ b/webclient/pairsclient0_5.html
@@ -67,6 +67,7 @@
           <option>landsat8_L1_NIR</option>
           <option>land-cover-mrlc-50120</option>
           <option>NAIP_Texas_49238</option>
+          <option>sentinel</option>
         </select>
         <!-- <input type="button" onclick="updateMap1()" value="Update map layers"> -->
       </form>
