work on datastore script

--- a/webclient/pairsclient0_5.html
+++ b/webclient/pairsclient0_5.html
@@ -4,7 +4,7 @@
 <head>
   <link rel="icon" href="data:,">
   <meta charset="utf-8">
-  <title>Using Parcel with OpenLayers</title>
+  <title>Pairs Geoscope Data Browser</title>
   <style>
     div {
       margin-bottom: 0.5em
