--- a/webclient/pairsclient0_5.html
+++ b/webclient/pairsclient0_5.html
@@ -58,6 +58,7 @@
       <form>
         <select id="selectLayer" onchange="updateMap1()">
           <option selected="selected" disabled>Choose layer</option>
+          <option>elevation_140</option>
           <option>cropfraction_49180</option>
           <option>cropland_49073</option>
           <option>cropscape_30</option>
