--- a/webclient/pairsclient0_5.html
+++ b/webclient/pairsclient0_5.html
@@ -58,6 +58,7 @@
       <form>
         <select id="selectLayer" onchange="updateMap1()">
           <option selected="selected" disabled>Choose layer</option>
+          <option>HDSMpercentThirtyToSixtyCentimeter_290_49888</option>
           <option>elevation_140</option>
           <option>cropfraction_49180</option>
           <option>cropland_49073</option>
@@ -65,7 +66,8 @@
           <option>cropscape_250</option>
           <option>modis_aqua_13_prs_51</option>
           <option>modis_aqua_13_prs_xy</option>
-          <option>landsat8_L1_NIR</option>
+          <option>landsat8_L1_49670</option>
+          <option>landsat8_L1_49673</option>
           <option>land-cover-mrlc-50120</option>
           <option>NAIP_Texas_49238</option>
           <option>sentinel</option>
