--- a/webclient/testclient0_5.html
+++ b/webclient/testclient0_5.html
@@ -60,6 +60,7 @@
           <option selected="selected" disabled>Choose layer</option>
           <option>Test_Overview</option>
           <option>modis_terra_13_prs_71</option>
+          <option>modis_aqua_13_prs_51</option>
         </select>
         <!-- <input type="button" onclick="updateMap1()" value="Update map layers"> -->
       </form>
